--- a/public/views/partials/admin/announcement.html
+++ b/public/views/partials/admin/announcement.html
@@ -43,45 +43,53 @@
                 </ul>
             </div>
             <div class="col-xs-12 col-md-8" style="{{announcement_detail == null ? 'display: none' : '';}}">
-                <ul class="nav nav-stacked">
-                    <li>
+                <div class="box">
+                    <div class="box-header">
                         <a href="#">
-                            <label>Author: </label>
-                            <br/><span ng-bind="announcement_detail.NAME"></span></a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <label>Title: </label>
-                            <br/><span ng-bind="announcement_detail.TITLE"></span></a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <label>Content: </label>
-                            <br/><span ng-bind="announcement_detail.CONTENT"></span></a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <label>Created at: </label>
-                            <br/><span ng-bind="announcement_detail.DATE_CREATED | date: 'dd/MM/yyyy HH:mm:ss'"></span></a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <label>Attachments: </label>
-                            <br/>
+                            <h3 class="box-title" ng-bind="announcement_detail.TITLE" style="font-weight: bold"></h3>
                         </a>
-                        <div class="row">
-                            <div class="col-lg- col-sm-6 col-xs-12" ng-repeat="attachment in announcement_attachment">
-                                <a class="info-box" href="{{attachment.URL}}" style="color: blue" target="_self" download="{{attachment.NAME}}">
-                                    <span class="info-box-icon bg-aqua"><i class="glyphicon glyphicon-download-alt"></i></span>
-                                    <div class="info-box-content">
-                                        <span class="info-box-text" ng-bind="attachment.NAME"></span>
-                                        <span ng-bind="attachment.ATTACHMENT_DESCRIPTION" style="font-size: 12px;color: #333;"></span>
-                                    </div>
+                    </div>
+                    <div class="box-footer no-padding" style="position: relative;">
+                        <ul class="nav nav-stacked">
+
+                            <li>
+                                <a href="#">
+                                    <label>Author: </label>
+                                    <br/><span ng-bind="announcement_detail.NAME"></span></a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <label>Content: </label>
+                                    <br/><span ng-bind="announcement_detail.CONTENT"></span></a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <label>Created at: </label>
+                                    <br/><span ng-bind="announcement_detail.DATE_CREATED | date: 'dd/MM/yyyy HH:mm:ss'"></span></a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <label>Attachments: </label>
+                                    <br/>
+                                    <span ng-if="announcement_attachment.length == 0">
+                                        No attachment.
+                                    </span>
                                 </a>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
+                                <div class="row">
+                                    <div class="col-lg- col-sm-6 col-xs-12" ng-repeat="attachment in announcement_attachment">
+                                        <a class="info-box" href="{{attachment.URL}}" style="color: blue" target="_self" download="{{attachment.NAME}}">
+                                            <span class="info-box-icon bg-aqua"><i class="glyphicon glyphicon-download-alt"></i></span>
+                                            <div class="info-box-content">
+                                                <span class="info-box-text" ng-bind="attachment.NAME"></span>
+                                                <span ng-bind="attachment.ATTACHMENT_DESCRIPTION" style="font-size: 12px;color: #333;"></span>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
 
                 <button class="btn btn-danger btn-md pull-right" ng-click="announcement_detail = null"><i class="fa fa-times-circle"></i> Close</button>
 
