--- a/public/views/partials/admin/home.html
+++ b/public/views/partials/admin/home.html
@@ -82,5 +82,10 @@
 	            </div>
       		</div>
 		</div>
+		<script type="text/javascript">
+			$('a.collapsed').click(function(e){
+			    return false;
+			});
+		</script>>
 
 	</section>
