--- a/public/views/partials/admin/resource.html
+++ b/public/views/partials/admin/resource.html
@@ -13,9 +13,9 @@
             </button>
         </div>
         <div class="row" style="margin-top: 5px">
-            <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="file in files">
-                <div class="info-box bg-aqua">
-                    <span class="info-box-icon"><i class="fa fa-paperclip"></i></span>
+            <div class="col-md-4 col-sm-6 col-xs-12" ng-repeat="file in files">
+                <div class="info-box">
+                    <span class="info-box-icon bg-aqua"><i class="fa fa-paperclip"></i></span>
                     <div class="info-box-content">
                         
                         <a href="{{file.attURL}}" target="_self" class="btn btn-effets btn-primary btn-xs pull-right" style="margin-left: 3px;" download="{{file.attNAME}}"><span class="glyphicon glyphicon-download-alt" ></span></a>
