--- a/public/css/ThaiCustom.css
+++ b/public/css/ThaiCustom.css
@@ -47,6 +47,6 @@
     -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.2); 
 }
 
-.profile-label {
+.profile-label, .knob-label {
     font-weight: bold;
 }
