--- a/public/views/partials/admin/assignment.html
+++ b/public/views/partials/admin/assignment.html
@@ -7,11 +7,11 @@
     </section>
     <div class="main-content">
         <div class="row">
-            <div class="col-xs-12 col-md-4">
+            <div class="col-xs-12 {{assignment_detail == null ? '' : 'col-md-4'}}">
                 <button ng-if="isTeacher" type="button" class="btn btn-success btn-sm" data-toggle="modal" ng-click="initNewAssignment()" data-target="#newAssignmentModal" style="float:right">
                     <span class="glyphicon glyphicon-plus"></span> Add
                 </button>
-                <div class="box" style="margin-top: 35px;">
+                <div class="box" style="{{isTeacher ? 'margin-top: 35px;' : ''">
                     <div class="box-body table-responsive no-padding">
                         <table class="table table-hover">
                             <tbody>
@@ -34,15 +34,17 @@
                 </div>
                 <!-- /.box -->
             </div>
-
-            <div class="col-md-8 col-xs-12">
+            <div class="col-md-8 col-xs-12" style="{{assignment_detail == null ? 'display: none' : '';}}">
                 <div class="box-footer no-padding" style="position: relative;">
-                    <div style="position: absolute; right: 10px; top: 10px;z-index: 1" ng-if="assignment_detail != null">
+                    <div style="position: absolute; right: 10px; top: 10px;z-index: 1" >
                         <button type="button" ng-if="isTeacher" class="btn btn-success btn-sm" ng-click="editAssignment(assignment_detail, assignment_attachment)" data-toggle="modal" data-target="#newAssignmentModal">
                             <span class="glyphicon glyphicon-edit"></span>
                         </button>
                         <button type="button" ng-if="isTeacher" class="btn btn-danger btn-sm">
                             <span class="glyphicon glyphicon-trash"></span>
+                        </button>
+                        <button type="button" class="btn btn-danger btn-sm" ng-click="close()">
+                            <span class="glyphicon glyphicon-remove"></span>
                         </button>
                     </div>
                     <ul class="nav nav-stacked">
@@ -82,7 +84,7 @@
                                         <span ng-if="assignment_attachment.length == 0">N/A</span>
                                     </a>
                                     <div class="row">
-                                        <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="attachment in assignment_attachment">
+                                        <div class="col-md-6 col-xs-12" ng-repeat="attachment in assignment_attachment">
                                             <a class="info-box" href="{{attachment.URL}}" style="color: blue" target="_self" download="{{attachment.NAME}}">
                                                 <span class="info-box-icon bg-aqua"><i class="glyphicon glyphicon-download-alt"></i></span>
                                                 <div class="info-box-content">
@@ -102,13 +104,14 @@
                     <div class="box">
                         <div class="box-header">
                             <h3 class="box-title">Submission</h3>
+                            <button class="btn btn-sm btn-success pull-right" type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newSubmitModal" ng-click="initNewSubmit()">Submit</button>
                         </div>
                         <div class="box-footer no-padding" ng-if="submission">
                             <ul class="nav nav-stacked">
                                 <li>
                                     <a href="#">
                                         <label>Created at: </label>
-                                        <br/><span ng-bind="submission.DATE_CREATED"></span></a>
+                                        <br/><span ng-bind="submission.DATE_CREATED | date: 'dd/MM/yyyy  HH:mm:ss"></span></a>
                                 </li>
                                 <li>
                                     <a href="#">
@@ -123,14 +126,22 @@
                                             N/A
                                         </span>
                                     </a>
-                                    <ul>
-                                        <li ng-repeat="sa in submission_attachment">
-                                            <a href="{{sa.attURL}}" style="color: blue" target="_self" download="{{sa.attNAME}}" ng-bind="sa.NAME"></a>
-                                        </li>
-                                    </ul>
+
+                                    <div class="row">
+                                        <div class="col-md-6 col-xs-12" ng-repeat="sa in submission_attachment">
+                                            <a class="info-box" href="{{sa.attURL}}" style="color: blue" target="_self" download="{{sa.NAME}}">
+                                                <span class="info-box-icon bg-aqua"><i class="glyphicon glyphicon-download-alt"></i></span>
+                                                <div class="info-box-content">
+                                                    <span class="info-box-text" ng-bind="sa.NAME"></span>
+                                                    <span ng-bind="sa.ATTACHMENT_DESCRIPTION" style="font-size: 12px;color: #333;"></span>
+                                                </div>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
+
                         <div class="box-footer no-padding" ng-if="submission == null">
                             <ul class="nav nav-stacked">
                                 <li><a href="#">No submission.</a></li>
@@ -176,7 +187,7 @@
                             <div class="input-group" style="width: 100%;  margin-bottom: 3px;" ng-repeat="resource in assignment.resources">
                                 <input type="text" ng-model="resource.AttNAME" id="AttNAME" readonly="readonly" class="form-control" style="width: 36%">
                                 <input type="text" ng-model="resource.DESCRIPTION" id="DESCRIPTION" maxlength="64" placeholder="A sort desciprtion" class="form-control" style="width: 56%">
-                                <button class="btn btn-danger btn-md"><span class="glyphicon glyphicon-trash"></span></button>
+                                <button class="btn btn-danger btn-md" ng-click=deleteAssAtt($index)><span class="glyphicon glyphicon-trash"></span></button>
                                 <input type="text" ng-model="resource.ATTACHMENT_ID" style="display: none;">
                             </div>
                             <button class="btn btn-primary btn-md" onclick="$('#myfile').click()" style="float: right;"><span class="glyphicon glyphicon-cloud-upload"></span> Upload file</button>
@@ -186,6 +197,43 @@
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                     <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="updateAssignment(assignment)" ng-if="assignment.TITLE != null && assignment.TITLE != ''">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <!-- Modal -->
+    <div class="modal fade" id="newSubmitModal" tabindex="-1" role="dialog" aria-labelledby="newSubmitModalLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="newSubmitModalLabel" style="font-weight: bold;">
+                        <span ng-if="assignment.ASSIGNMENT_ID == null">Create a new submission</span>
+                    </h4>
+                </div>
+                <div class="modal-body">
+                    <form id="assignment-form">
+                        <div class="form-group">
+                            <label for="assignment-title" class="control-label">Content:</label>
+                            <input type="text" class="form-control" id="assignment-title" ng-model="submit.CONTENT">
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Choose a file to upload</label>
+                            <input type="file" id="myfilesubmit" onchange="angular.element(this).scope().uploadedSubmmission()" style="display: none;">
+                            <div class="input-group" style="width: 100%;  margin-bottom: 3px;" ng-repeat="resource in submit.resources">
+                                <input type="text" ng-model="resource.AttNAME" id="AttNAME" readonly="readonly" class="form-control" style="width: 36%">
+                                <input type="text" ng-model="resource.DESCRIPTION" id="DESCRIPTION" maxlength="64" placeholder="A sort desciprtion" class="form-control" style="width: 56%">
+                                <button class="btn btn-danger btn-md" ng-click="deleteSubmitAtt($index)"><span class="glyphicon glyphicon-trash"></span></button>
+                                <input type="text" ng-model="resource.ATTACHMENT_ID" style="display: none;">
+                            </div>
+                            <button class="btn btn-primary btn-md" onclick="$('#myfilesubmit').click()" style="float: right;"><span class="glyphicon glyphicon-cloud-upload"></span> Upload file</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="submissions()" ng-if="submit.CONTENT != CONTENT">Submit</button>
                 </div>
             </div>
         </div>
