--- a/public/views/partials/admin/resource.html
+++ b/public/views/partials/admin/resource.html
@@ -8,7 +8,7 @@
     <div class="main-content">
         <input type="file" id="myfile" onchange="angular.element(this).scope().loadedfile()" style="display: none;">
         <div class="row" style="padding-right: 30px">
-            <button type="button" class="btn btn-success btn-sm" ng-if="isTeacher" data-toggle="modal" data-target="#myModal" ng-click="resource = {}" style="float: right;">
+            <button type="button" class="btn btn-primary btn-sm" ng-if="isTeacher" data-toggle="modal" data-target="#myModal" ng-click="resource = {}" style="float: right;">
                 <span class="glyphicon glyphicon-plus"></span> Add
             </button>
         </div>
