--- a/public/views/partials/admin/assignment.html
+++ b/public/views/partials/admin/assignment.html
@@ -8,10 +8,14 @@
     <div class="main-content">
         <div class="row">
             <div class="col-xs-12 {{assignment_detail == null ? '' : 'col-md-4'}}">
-                <button ng-if="isTeacher" type="button" class="btn btn-success btn-sm" data-toggle="modal" ng-click="initNewAssignment()" data-target="#newAssignmentModal" style="float:right">
-                    <span class="glyphicon glyphicon-plus"></span> Add
-                </button>
-                <div class="box" style="{{isTeacher ? 'margin-top: 35px;' : ''">
+                
+                <div class="box box-primary" style="{{isTeacher ? 'margin-top: 35px;' : ''">
+                    <div class="box-header">
+                        <h3 class="box-title">Assignments</h3>
+                        <button ng-if="isTeacher" type="button" class="btn btn-primary btn-sm" data-toggle="modal" ng-click="initNewAssignment()" data-target="#newAssignmentModal" style="float: right;">
+                            <span class="glyphicon glyphicon-plus"></span> Add
+                        </button>
+                    </div>
                     <div class="box-body table-responsive no-padding">
                         <table class="table table-hover">
                             <tbody>
@@ -19,7 +23,6 @@
                                     <th>Title</th>
                                     <th>Start date</th>
                                     <th>Due date</th>
-                                    <th></th>
                                 </tr>
                                 <tr ng-repeat="assignment in assignments" ng-click="setAssignmentId(assignment.ASSIGNMENT_ID)" style="cursor: pointer;">
                                     <td ng-bind="assignment.TITLE"></td>
@@ -67,41 +70,41 @@
                             <a href="#">
                                 <label>Created at: </label>
                                 <br/><span ng-bind="assignment_detail.DATE_CREATED | date: 'dd/MM/yyyy HH:mm:ss'"></span>
-                                <li>
-                                    <a href="#">
-                                        <label>Start date: </label>
-                                        <br/><span ng-bind="assignment_detail.START_DATE | date: 'dd/MM/yyyy  HH:mm:ss'"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <label>Due date: </label>
-                                        <br/><span ng-bind="assignment_detail.DUE_DATE | date: 'dd/MM/yyyy  HH:mm:ss'"></span></a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <label>Attachments: </label>
-                                        <br/>
-                                        <span ng-if="assignment_attachment.length == 0">N/A</span>
-                                    </a>
-                                    <div class="row">
-                                        <div class="col-md-6 col-xs-12" ng-repeat="attachment in assignment_attachment">
-                                            <a class="info-box" href="{{attachment.URL}}" style="color: blue" target="_self" download="{{attachment.NAME}}">
-                                                <span class="info-box-icon bg-aqua"><i class="glyphicon glyphicon-download-alt"></i></span>
-                                                <div class="info-box-content">
-                                                    <span class="info-box-text" ng-bind="attachment.NAME"></span>
-                                                    <span ng-bind="attachment.ATTACHMENT_DESCRIPTION" style="font-size: 12px;color: #333;"></span>
-                                                </div>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </li>
                             </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <label>Start date: </label>
+                                <br/><span ng-bind="assignment_detail.START_DATE | date: 'dd/MM/yyyy  HH:mm:ss'"></span></a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <label>Due date: </label>
+                                <br/><span ng-bind="assignment_detail.DUE_DATE | date: 'dd/MM/yyyy  HH:mm:ss'"></span></a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <label>Attachments: </label>
+                                <br/>
+                                <span ng-if="assignment_attachment.length == 0">N/A</span>
+                            </a>
+                            <div class="row">
+                                <div class="col-md-6 col-xs-12" ng-repeat="attachment in assignment_attachment">
+                                    <a class="info-box" href="{{attachment.URL}}" style="color: blue" target="_self" download="{{attachment.NAME}}">
+                                        <span class="info-box-icon bg-aqua"><i class="glyphicon glyphicon-download-alt"></i></span>
+                                        <div class="info-box-content">
+                                            <span class="info-box-text" ng-bind="attachment.NAME"></span>
+                                            <span ng-bind="attachment.ATTACHMENT_DESCRIPTION" style="font-size: 12px;color: #333;"></span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
                         </li>
                     </ul>
                 </div>
 
                 <br>
-                    <div class="box">
+                    <div class="box" ng-if="!isTeacher">
                         <div class="box-header">
                             <h3 class="box-title">Submission</h3>
                             <button class="btn btn-sm btn-success pull-right" type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newSubmitModal" ng-click="initNewSubmit()">Submit</button>
