--- a/public/views/partials/admin/discussion.html
+++ b/public/views/partials/admin/discussion.html
@@ -10,10 +10,10 @@
 
         <div class="row">
             <div class="col-xs-12">
-                <div class="box">
+                <div class="box box-primary">
                     <div class="box-header">
                         <h3 class="box-title">Discussions</h3>
-                         <button type="button" class="btn btn-success btn-sm" data-toggle="modal" data-target="#newDiscussionModal" style="float:right">
+                         <button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#newDiscussionModal" style="float:right">
                             <span class="glyphicon glyphicon-plus"></span> Add
                         </button>
                     </div>
@@ -40,38 +40,37 @@
             </div>
         </div>
     </div>
-    <div class="box box-success">
-        <div class="box-header ui-sortable-handle" style="cursor: move;">
-            <i class="fa fa-comments-o"></i>
-            <h3 class="box-title" ng-bind="discussion_topic"></h3>
-        </div>
-        <div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 250px;">
-            <div class="box-body chat" id="chat-box" style="overflow: hidden; width: auto; height: 250px;">
-                  <!-- chat item -->
-                <div class="item" ng-repeat="message in messages">
-                    <img src="images/user_admin.png" alt="user image" class="online">
-
-                    <p class="message">
-                        <a href="#" class="name">
-                            <small class="text-muted pull-right"><i class="fa fa-clock-o"></i> <span ng-bind="message.DATE_CREATED"></span></small>
-                            <span ng-bind="message.NAME"></span>
-                        </a>
-                        <span ng-bind="message.CONTENT"></span>  
-                    </p>
-                </div>
+    <div class="box box-widget">
+        <div class="box-header with-border">
+            <div class="user-block">
+                <img class="img-circle" src="images/user_admin.png" alt="User Image">
+                <span class="username"><a href="#">Topic</a></span>
+                <span class="description">Created by Chau - 7:30 PM Today</span>
             </div>
-            <div class="slimScrollBar" style="background: rgb(0, 0, 0); width: 7px; position: absolute; top: 29px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 184.911px;"></div>
-            <div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51); opacity: 0.2; z-index: 90; right: 1px;"></div>
         </div>
-        <!-- /.chat -->
+        <div class="box-footer box-comments">
+            <div class="box-comment" ng-repeat="message in messages">
+                    <!-- User imagese -->
+                <img class="img-circle img-sm" src="images/user_admin.png" alt="User Image">
+
+                <div class="comment-text">
+                    <span class="username">
+                        <span ng-bind="message.NAME"></span>
+                        <span class="text-muted pull-right" ng-bind="message.DATE_CREATED | date: 'dd/MM/yyyy HH:ss'"></span>
+                    </span><!-- /.username -->
+                    <span ng-bind="message.CONTENT"></span>
+                </div>
+                    <!-- /.comment-text -->
+            </div>
+        </div>
         <div class="box-footer">
-            <div class="input-group">
-                <input class="form-control" placeholder="Type message...">
-
-                <div class="input-group-btn">
-                    <button type="button" class="btn btn-success"><i class="fa fa-plus"></i></button>
+            <form action="#" method="post">
+                <img class="img-responsive img-circle img-sm" src="images/user_admin.png" alt="Alt Text">
+                <!-- .img-push is used to add margin to elements next to floating images -->
+                <div class="img-push">
+                    <input type="text" class="form-control input-sm" placeholder="Press enter to post comment">
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 
