--- a/public/views/partials/admin/gradebook.html
+++ b/public/views/partials/admin/gradebook.html
@@ -26,11 +26,11 @@
     </div>
     <!-- Admin view -->
     <div class="row" ng-if="isTeacher" style="margin-top: 35px;">
-        <div class="col-xs-12 col-md-4">
-            <div class="box">
+        <div class="col-xs-12 col-md-12">
+            <div class="box box-primary">
                 <div class="box-header">
                     <h3 class="box-title">Gradebook items</h3>
-                    <button type="button" class="btn btn-success btn-sm pull-right" data-toggle="modal" data-target="#" ng-click="resource = {}" style="float: right;">
+                    <button type="button" class="btn btn-primary btn-sm pull-right" data-toggle="modal" data-target="#newGradeItem" ng-click="resource = {}" style="float: right;">
                         <span class="glyphicon glyphicon-plus"></span> Add item
                     </button>
                 </div>
@@ -66,9 +66,13 @@
             <!-- /.box -->
         </div>
 
-        <div class="col-xs-12 col-md-8">
+    </div>
+    <div class="row" ng-if="isTeacher && chosen_gradebook_item != null">
+        <div class="col-xs-12">
             <div class="box">
-                <!-- /.box-header -->
+                <div class="box-header">
+                    <h3 class="box-title" style="font-weight: bold">{{chosen_gradebook_item.TITLE}}</h3>
+                </div>
                 <div class="box-body table-responsive no-padding">
                     <table class="table table-hover">
                         <tbody>
@@ -126,5 +130,30 @@
             </div>
         </div>
     </div>
+
+    <!-- Add item Modal -->
+    <div class="modal fade" id="newGradeItem" tabindex="-1" role="dialog" aria-labelledby="newGradeItemLabel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="newGradeItemLabel" style="font-weight: bold;">New grade item</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="discussion-form">
+                        <div class="form-group">
+                            <label for="discussion-topic" class="control-label">Title:</label>
+                            <input type="text" class="form-control" id="gradebook_item_title" ng-model="new_grade_item.TITLE">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addGradeItem(new_grade_item)">Save</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 </div>
